--- a/data-store.html
+++ b/data-store.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <title>data-store</title>
   <meta name="author" content="krollster">
-  <meta name="description" content="manipulate strings" />
+  <meta name="description" content="data store & release" />
   
   <script type="text/javascript" src="http://meemoo.org/meemoo/v1/meemoo-min.js"></script>
   
